Minor sidebar overflow bug fix

--- a/index.css
+++ b/index.css
@@ -158,9 +158,9 @@ html, body {
 #sidebar {
     position: fixed;
     top: 0;
-    right: -30vw;
+    right: -50vw;
     height: 100dvh;
-    width: 30vw;
+    width: 50vw;
     z-index: 999;
     padding: 2rem 1rem;
     background-color: #1a01209c;
